Fix alignment for highlighted banner

--- a/blocks/banners/highlighted-banner.css
+++ b/blocks/banners/highlighted-banner.css
@@ -18,7 +18,7 @@
 .highlighted-banner > div > div:last-child > h6,
 .highlighted-banner > div > div:last-child > p:nth-of-type(1) {
     max-width: 19.5rem;
-    margin: 0;
+    margin: 1rem 0;
 }
 
 .highlighted-banner > div > div:last-child > h5 > em {
@@ -82,10 +82,18 @@
         border-radius: var(--border-tear-drop);
         object-fit: cover;
     }
+
+
 }
 
 @media (width >= 1280px) {
     .highlighted-banner > div > div:first-child > picture img {
         height: 100%;
+    }
+
+    .highlighted-banner > div > div:last-child > h5 {
+        font-size: var(--heading-font-l);
+        font-weight: var(--text-regular);
+
     }
 }
